<resources>
    <string name="app_name">AND_exam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AND exam app</string>
    <string name="nav_header_subtitle">Made with reddit API. r/dankmemes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_layouts">Layouts</string>
    <string name="menu_resources">Resources</string>
    <string name="menu_intents">Intents</string>

    <string name="home_second">Home Second</string>
    <string name="title">Title</string>
    <string name="layout_fragment_intro">In this fragment is shown how to give views weight, so that the views automatically split the remaining free space in the fragment and split it in 1:3 ratio</string>
    <string name="resource_plus">+</string>
    <string name="resource_minus">-</string>
    <string name="resource_intro">This fragment is for the 2nd class of the semester. It shows a progress bar, a simple text retrieval on button click and switches</string>
    <string name="resource_textView">This should be replaced with the text from the EditText once the button is pressed</string>
    <string name="resource_editText">Write your text here that will replace TextView</string>
    <string name="resource_button">Get text</string>
    <string name="resource_switchExplanation">When the switch is active, the fragment background is light blue otherwise its pink</string>
    <string name="resource_switch">Make background light blue</string>
    <string name="intent_sendEmail">Send an email to mom</string>
    <string name="intent_sendText">Send a message to another activity</string>
    <string name="send">Send</string>
    <string name="home_fragment_intro">This app is to show what I, Justinas Jancys, have learned during this semester in the android course.</string>
    <string name="home_fragment_intro2">They said that its impossible to make an app in just 3 days. I say its very possible, it just looks terrible.</string>
    <string name="home_fragment_intro3">Sorry in advance for the ugly design. Im not an artist and I didnt have much time to make it pretty :)</string>
    <string name="menu_authentication">Authentication</string>
    <string name="intent_comment">I know this looks discusting, but bear with me</string>
    <string name="gallery_intro">This is the gallery. Here are displayed memes from r/dankmemes. To add something to the favorites, just tap on the meme itself.</string>
</resources>
