<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.and_exam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.and_exam.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.and_exam.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.and_exam.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_layouts"
        android:name="com.example.and_exam.ui.layouts.LayoutFragment"
        android:label="@string/menu_layouts"
        tools:layout="@layout/fragment_layouts" />

    <fragment
        android:id="@+id/nav_resources"
        android:name="com.example.and_exam.ui.resources.ResourceFragment"
        android:label="@string/menu_resources"
        tools:layout="@layout/fragment_resources" />

    <fragment
        android:id="@+id/nav_intents"
        android:name="com.example.and_exam.ui.intents.IntentFragment"
        android:label="@string/menu_intents"
        tools:layout="@layout/fragment_intents" />
</navigation>