<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resource_intro" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resource_plus" />

            <Button
                android:id="@+id/decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resource_minus" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/resource_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/resource_editText"
            android:inputType="textPersonName" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resource_setText"
            android:text="@string/resource_button"/>

        <TextView
            android:id="@+id/resource_textView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/resource_textView"
            android:background="#c2c2c2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/resource_switchExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resource_switchExplanation" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resource_switch"
            android:checked="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>